--- a/res/xml/pref_general.xml
+++ b/res/xml/pref_general.xml
@@ -1,7 +1,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
         <CheckBoxPreference
-        android:defaultValue="false"
+        android:defaultValue="true"
         android:key="notification_on_exit"
         android:title="@string/notification_on_exit"
         android:summary="@string/notification_on_exit_summary" />
