--- a/res/xml/pref_general.xml
+++ b/res/xml/pref_general.xml
@@ -1,35 +1,49 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
 
-        <CheckBoxPreference
+    <CheckBoxPreference
         android:defaultValue="true"
         android:key="notification_on_exit"
-        android:title="@string/notification_on_exit"
-        android:summary="@string/notification_on_exit_summary" />
-    
+        android:summary="@string/notification_on_exit_summary"
+        android:title="@string/notification_on_exit" />
+
     <!-- NOTE: EditTextPreference accepts EditText attributes. -->
     <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
-<!--     <EditTextPreference -->
-<!--         android:capitalize="words" -->
-<!--         android:defaultValue="@string/pref_default_display_name" -->
-<!--         android:inputType="textCapWords" -->
-<!--         android:key="example_text" -->
-<!--         android:maxLines="1" -->
-<!--         android:selectAllOnFocus="true" -->
-<!--         android:singleLine="true" -->
-<!--         android:title="@string/pref_title_display_name" /> -->
+    <EditTextPreference
+    android:capitalize="words"
+    android:defaultValue=""
+    android:inputType="textCapWords"
+    android:key="exit_noti_text"
+    android:maxLines="1"
+    android:selectAllOnFocus="true"
+    android:singleLine="true"
+    android:title="@string/exit_noti_caption"/>
+
+
+    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
+    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
+    <!-- <EditTextPreference -->
+    <!-- android:capitalize="words" -->
+    <!-- android:defaultValue="@string/pref_default_display_name" -->
+    <!-- android:inputType="textCapWords" -->
+    <!-- android:key="example_text" -->
+    <!-- android:maxLines="1" -->
+    <!-- android:selectAllOnFocus="true" -->
+    <!-- android:singleLine="true" -->
+    <!-- android:title="@string/pref_title_display_name" /> -->
+
 
     <!--
          NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
          dismiss it.
     -->
     <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-<!--     <ListPreference -->
-<!--         android:defaultValue="-1" -->
-<!--         android:entries="@array/pref_example_list_titles" -->
-<!--         android:entryValues="@array/pref_example_list_values" -->
-<!--         android:key="example_list" -->
-<!--         android:negativeButtonText="@null" -->
-<!--         android:positiveButtonText="@null" -->
-<!--         android:title="@string/pref_title_add_friends_to_messages" /> -->
+    <!-- <ListPreference -->
+    <!-- android:defaultValue="-1" -->
+    <!-- android:entries="@array/pref_example_list_titles" -->
+    <!-- android:entryValues="@array/pref_example_list_values" -->
+    <!-- android:key="example_list" -->
+    <!-- android:negativeButtonText="@null" -->
+    <!-- android:positiveButtonText="@null" -->
+    <!-- android:title="@string/pref_title_add_friends_to_messages" /> -->
 
 </PreferenceScreen>
