--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,16 +1,12 @@
 <resources>
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
+    <!--Base application theme, dependent on API level. This theme is replaced
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.-->
     <style name="AppBaseTheme" parent="Theme.Parakeet_light">
 
-        <!--
-            Theme customizations available in newer API levels can go in
+        <!--Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
+            backward-compatibility can go here. -->
         <item name="showcaseViewStyle">@style/CustomShowcaseTheme</item>
     </style>
 
@@ -40,9 +36,7 @@
         <item name="android:orientation">horizontal</item>
         <item name="android:background">@drawable/undobar</item>
         <item name="android:clickable">true</item>
-        <item name="android:showDividers">middle</item>
         <item name="android:divider">@drawable/undobar_divider</item>
-        <item name="android:dividerPadding">10dp</item>
     </style>
 
     <style name="UndoBarMessage">
@@ -66,7 +60,6 @@
         <item name="android:drawableLeft">@drawable/ic_undobar_undo</item>
         <item name="android:drawablePadding">12dp</item>
         <item name="android:textAppearance">?android:textAppearanceSmall</item>
-        <item name="android:textAllCaps">true</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textColor">#fff</item>
         <item name="android:text">@string/undo</item>
