--- a/res/layout/activity_parakeet_main.xml
+++ b/res/layout/activity_parakeet_main.xml
@@ -114,7 +114,7 @@
                 android:background="#a9c606" >
             </LinearLayout>
 
-            <ListView
+            <com.ilsecondodasinistra.parakeet.EnhancedListView
                 android:id="@+id/todoList"
                 android:layout_width="fill_parent"
                 android:layout_height="0dip"
@@ -122,7 +122,7 @@
                 android:layout_marginRight="0dip"
                 android:layout_weight="6"
                 android:focusable="true" >
-            </ListView>
+            </com.ilsecondodasinistra.parakeet.EnhancedListView>
         </LinearLayout>
 
         <!-- DRAWER LAYOUT - MENU -->
