--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -65,4 +65,8 @@
         <item name="android:text">@string/undo</item>
     </style>
     
+	<style name="fade_animation">
+		<item name="@android:windowEnterAnimation">@anim/popup_show</item>
+		<item name="@android:windowExitAnimation">@anim/popup_hide</item>
+	</style>
 </resources>
