--- a/parakeetshared/src/main/res/layout/activity_about.xml
+++ b/parakeetshared/src/main/res/layout/activity_about.xml
@@ -94,6 +94,12 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5sp"
                 android:text="@string/app_changelog" />
+
+            <Button
+                android:id="@+id/install"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Install" />
         </LinearLayout>
     </ScrollView>
 
