--- a/parakeetshared/src/main/res/xml/pref_headers.xml
+++ b/parakeetshared/src/main/res/xml/pref_headers.xml
@@ -3,13 +3,13 @@
     <!-- These settings headers are only used on tablets. -->
 
     <header
-        android:fragment="com.ilsecondodasinistra.parakeet.ParakeetSettingsActivity$GeneralPreferenceFragment"
+        android:fragment="com.ilsecondodasinistra.parakeet.shared.SettingsActivity$GeneralPreferenceFragment"
         android:title="@string/pref_header_general" />
     <header
-        android:fragment="com.ilsecondodasinistra.parakeet.ParakeetSettingsActivity$NotificationPreferenceFragment"
+        android:fragment="com.ilsecondodasinistra.parakeet.shared.SettingsActivity$NotificationPreferenceFragment"
         android:title="@string/pref_header_notifications" />
     <header
-        android:fragment="com.ilsecondodasinistra.parakeet.ParakeetSettingsActivity$DataSyncPreferenceFragment"
+        android:fragment="com.ilsecondodasinistra.parakeet.shared.SettingsActivity$DataSyncPreferenceFragment"
         android:title="@string/pref_header_data_sync" />
 
 </preference-headers>
